# funcode

./: AGENTS.md  Cargo.toml  README.md  TODO.md
.agents/skills/rust-guidelines/: SKILL.md
benches/: composer.rs
src/: agent.rs  app.rs  auth.rs  clipboard.rs  commands.rs  composer.rs  lib.rs  main.rs  model_catalog.rs  runtime.rs  session.rs  submission.rs  terminal_selection.rs  theme.rs  ui.rs  usage.rs  workspace.rs
src/llm/: mod.rs
src/llm/providers/: chatgpt.rs  mod.rs
src/llm/providers/prompts/: build.md  plan.md
src/theme/: config.rs  mod.rs
src/tools/: edit.rs  mod.rs  read.rs  search.rs  terminal.rs  workspace.rs
src/transcript/: mod.rs
src/ui/: markdown.rs  transcript.rs
