[package]
name = "funcode"
version = "0.1.0"
edition = "2024"
authors = ["Shubham"]

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
crossterm = "0.29.0"
futures = "0.3.32"
rand = "0.9.2"
ratatui = "0.30.2"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rig-core = "0.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.52.0", features = ["macros", "rt", "sync", "time"] }
url = "2.5.8"
