[package]
name = "funcode"
version = "0.1.0"
edition = "2024"
authors = ["Shubham"]

[dependencies]
anyhow = "1.0.103"
arboard = "3.6.1"
base64 = "0.22.1"
crossterm = "0.29.0"
crossbeam = "0.8.4"
futures = "0.3.32"
fff-search = "0.9.6"
globset = "0.4.18"
ignore = "0.4.26"
libc = "0.2.177"
rand = "0.9.2"
ratatui = "0.30.2"
regex = "1.12.2"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rig-core = "0.39.0"
ropey = "1.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
similar = "2.7.0"
tempfile = "3.27.0"
tokio = { version = "1.52.0", features = ["io-util", "macros", "process", "rt", "sync", "time"] }
url = "2.5.8"
unicode-segmentation = "1.13.3"
unicode-width = "0.2.2"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.9.0"

[[bench]]
name = "composer"
harness = false
